--- a/app/src/main/res/layout/fragment_creator.xml
+++ b/app/src/main/res/layout/fragment_creator.xml
@@ -38,6 +38,7 @@
 
 
                 <TextView
+                    android:paddingHorizontal="8dp"
                     android:textAlignment="viewStart"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -99,40 +100,6 @@
             </com.google.android.material.textfield.TextInputLayout>
 
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/descriptionLayout"
-                style="@style/MyTransparentTextInputLayout"
-                android:layout_width="match_parent"
-                android:visibility="gone"
-                app:layout_constraintTop_toBottomOf="@+id/titleLayout"
-                tools:visibility="visible">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/descriptionEditText"
-                    style="@style/MyTextInputEditText"
-                    android:gravity="top|start"
-                    android:hint="@string/note_text"
-                    android:inputType="textMultiLine"
-                    android:lines="4"
-                    android:scrollbars="vertical" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/addressLayout"
-                style="@style/MyTransparentTextInputLayout"
-                android:layout_width="match_parent"
-                android:visibility="gone"
-                app:layout_constraintTop_toBottomOf="@+id/descriptionLayout"
-                tools:visibility="visible">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/addressEditText"
-                    style="@style/MyTextInputEditText"
-                    android:hint="عنوان المحل"
-                    android:inputType="textMultiLine"
-                    android:lines="2"
-                    android:scrollbars="vertical" />
-            </com.google.android.material.textfield.TextInputLayout>
 
 
             <LinearLayout
@@ -141,11 +108,24 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:visibility="gone"
-                app:layout_constraintTop_toBottomOf="@+id/addressLayout"
+                app:layout_constraintTop_toBottomOf="@+id/titleLayout"
                 tools:visibility="visible">
 
-                <com.google.android.material.textfield.TextInputLayout style="@style/MyTransparentTextInputLayout">
+<!--
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/MyTransparentTextInputLayout">
 
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/addressEditText"
+                        style="@style/MyTextInputEditText"
+                        android:hint="عنوان المحل"
+                        android:inputType="textMultiLine"
+                        android:lines="2"
+                        android:scrollbars="vertical" />
+                </com.google.android.material.textfield.TextInputLayout>
+-->
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/MyTransparentTextInputLayout">
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/phoneTV"
                         style="@style/MyTextInputEditText"
@@ -155,8 +135,8 @@
                         android:scrollbars="vertical" />
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <com.google.android.material.textfield.TextInputLayout style="@style/MyTransparentTextInputLayout">
-
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/MyTransparentTextInputLayout">
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/priceTV"
                         style="@style/MyTextInputEditText"
@@ -167,6 +147,7 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <LinearLayout
+                    android:layout_marginTop="10dp"
                     android:id="@+id/shippingLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -190,7 +171,61 @@
                         android:theme="@style/MySpinner" />
 
                 </LinearLayout>
+
+
+
+
+                <LinearLayout
+                    android:layout_marginTop="10dp"
+                    android:id="@+id/priceTypeLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/rounded_shadow"
+                    android:orientation="vertical"
+                    android:padding="2dp"
+                    app:layout_constraintTop_toBottomOf="@id/headerView">
+
+                    <TextView
+                        style="@style/TextView.InputLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/shipping" />
+
+                    <androidx.appcompat.widget.AppCompatSpinner
+                        android:id="@+id/priceTypeSpinner"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:entries="@array/shipping_ability"
+                        android:prompt="@string/shipping"
+                        android:theme="@style/MySpinner" />
+
+                </LinearLayout>
+
+
+
+
             </LinearLayout>
+
+
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/descriptionLayout"
+                style="@style/MyTransparentTextInputLayout"
+                android:layout_width="match_parent"
+                android:visibility="gone"
+                app:layout_constraintTop_toBottomOf="@+id/productDetailsLayout"
+                tools:visibility="visible">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/descriptionEditText"
+                    style="@style/MyTextInputEditText"
+                    android:gravity="top|start"
+                    android:hint="@string/note_text"
+                    android:inputType="textMultiLine"
+                    android:minLines="5"
+                    android:scrollbars="vertical" />
+            </com.google.android.material.textfield.TextInputLayout>
 
             <include
                 layout="@layout/error_view"
