--- a/app/src/main/res/layout/item_message_received.xml
+++ b/app/src/main/res/layout/item_message_received.xml
@@ -31,7 +31,7 @@
     <LinearLayout
         android:orientation="vertical"
         android:id="@+id/messageBody"
-        android:background="@drawable/rounded_corners_full"
+        android:background="@drawable/rounded_red"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="2dp"
