--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -38,6 +38,7 @@
                     android:paddingRight="@dimen/feed_item_padding_left_right" >
 
                     <ImageView
+                        android:layout_gravity="center_vertical"
                         android:background="@drawable/circle_white"
                         android:id="@+id/authorImageView"
                         android:layout_width="40dp"
@@ -45,13 +46,16 @@
                         app:srcCompat="@drawable/logo" />
 
                     <LinearLayout
-                        android:layout_width="fill_parent"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
+                        android:orientation="vertical"
                         android:paddingLeft="@dimen/feed_item_profile_info_padd"
                         android:paddingRight="@dimen/feed_item_profile_info_padd" >
 
                         <TextView
+                            android:textAlignment="viewStart"
+                            android:layout_gravity="start"
                             tools:text="@string/app_name"
                             android:textColor="?myTheme_list_itemTitleColor"
                             android:id="@+id/nameTextView"
@@ -61,15 +65,48 @@
                             android:textStyle="bold" />
 
                         <TextView
+                            android:textAlignment="viewStart"
+                            android:layout_gravity="start"
                             tools:text="2 days ago"
                             android:id="@+id/dateTextView"
-                            android:textAlignment="viewEnd"
-                            android:layout_gravity="end"
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:textColor="?myTheme_list_itemDateColor"
                             android:textSize="@dimen/feed_item_timestamp" />
                     </LinearLayout>
+
+
+                    <LinearLayout
+                        android:id="@+id/typeLayout"
+                        android:visibility="gone"
+                        tools:visibility="visible"
+                        android:layout_gravity="center_vertical"
+                        android:background="@drawable/rounded_red"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <LinearLayout
+                            android:gravity="center_vertical"
+                            android:paddingHorizontal="8dp"
+                            android:paddingVertical="4dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+                            <ImageView
+                                android:tint="@color/white"
+                                android:id="@+id/typeIV"
+                                android:layout_width="18dp"
+                                android:layout_height="18dp"
+                                app:srcCompat="@drawable/shopping"/>
+                            <TextView
+                                android:id="@+id/typeTV"
+                                android:textColor="@color/white"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Lost"/>
+                        </LinearLayout>
+                    </LinearLayout>
+
                 </LinearLayout>
 
 
