--- a/app/src/main/res/layout/item_store.xml
+++ b/app/src/main/res/layout/item_store.xml
@@ -80,7 +80,7 @@
         android:padding="4dp"
         android:layout_margin="4dp"
         tools:text="Restaurant"
-        android:background="@drawable/rounded_corners_full"
+        android:background="@drawable/rounded_red"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
