--- a/app/src/main/res/layout/list_item_drawer_category_left.xml
+++ b/app/src/main/res/layout/list_item_drawer_category_left.xml
@@ -11,7 +11,7 @@
     <TextView
         android:visibility="gone"
         tools:visibility="visible"
-        android:background="@drawable/rounded_corners_full"
+        android:background="@drawable/rounded_red"
         android:id="@+id/drawer_list_item_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
