--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
     <color name="colorPrimary">#22ba00</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimaryDark">#177E00</color>
     <color name="colorAccent">#D81B60</color>
 
     <color name="blue">#0a80d1</color>
@@ -11,6 +11,7 @@
     <color name="green_lite">#00ce00</color>
 
     <color name="grey">#aaa</color>
+    <color name="gray">#d3d3d3</color>
     <color name="grey_lite">#e5e5e5</color>
     <color name="grey_lite2">#f4f4f4</color>
 
